# pwasm-token-example

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.sh  linker.sh  rust-toolchain  wasm-install.sh
.cargo/: config
compiled/: RepoContract.json  TokenContract.json  repo.wasm  token-deployed.wasm  token.wasm
contract/: Cargo.toml
contract/src/: lib.rs
ext/: Cargo.toml  lib.rs
json-tests/: token.json
real_world/: Cargo.toml
real_world/src/: real_world.rs
res/: token.json
src/: repo.rs  token.rs
token/: Cargo.toml
