[package]
name = "pwasm-token-contract-bin"
version = "0.1.0"
authors = ["Alexey Frolov <frol.rage@gmail.com>"]

[dependencies]
pwasm-std = "0.3"
pwasm-abi = { git = "https://github.com/paritytech/pwasm-abi" }
pwasm-token-contract = { path = "contract" }

[lib]
crate-type = ["cdylib"]
path = "src/token.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
