[package]
name = "pwasm-token-contract"
version = "0.1.0"
authors = ["Alexey Frolov <frol.rage@gmail.com>"]

[dependencies]
pwasm-std = "0.10"
pwasm-ethereum = "0.6.3"
pwasm-abi = "0.1.9"
pwasm-abi-derive = "0.1.9"
tiny-keccak = "1.4.2"

[dev-dependencies]
pwasm-test = { git = "https://github.com/paritytech/pwasm-test" }

[features]
std = ["pwasm-std/std", "pwasm-ethereum/std"]
